updated address, pay logo, outdated links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <!--=============== FAVICON ===============-->
         <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+        <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 
         <!--=============== REMIX ICONS ===============-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -84,7 +85,7 @@
                             <a href="https://github.com/mateusloubach" target="_blank" class="home__social-link">
                                 <i class="ri-github-line"></i>
                             </a>
-                            <a href="https://www.instagram.com/mt_lbach/" target="_blank" class="home__social-link">
+                            <a href="https://www.instagram.com/instagram/" target="_blank" class="home__social-link">
                                 <i class="ri-instagram-line"></i>
                             </a>
                             <a href="https://www.linkedin.com/in/mateusloubach/" target="_blank" class="home__social-link">
@@ -384,7 +385,7 @@
                                 <h3 class="contact__subtitle">Para suporte imediato:</h3>
                                 <span class="contact__description">
                                     <i class="ri-phone-line contact__icon"></i>
-                                    +777-888-999
+                                    +777-555-333
                                 </span>
                             </div>
 
@@ -451,9 +452,9 @@
                     <h3 class="footer__title">Endereço</h3>
 
                     <ul class="footer__data">
-                        <li class="footer__information">130 - Brazil</li>
-                        <li class="footer__information">São Paulo - 04631-010</li>
-                        <li class="footer__information">123-456-789</li>
+                        <li class="footer__information">33 - São Paulo</li>
+                        <li class="footer__information">São Paulo - SP/Brazil</li>
+                        <li class="footer__information">04631-010</li>
                     </ul>
                 </div>
 
@@ -461,7 +462,7 @@
                     <h3 class="footer__title">Entre em contato:</h3>
 
                     <ul class="footer__data">
-                        <li class="footer__information">+777-888-999</li>
+                        <li class="footer__information">+3030-0330</li>
                         
                         <div class="footer__social">
                             <a href="https://www.facebook.com/" class="footer__social-link">
@@ -483,10 +484,10 @@
                     </h3>
 
                     <div class="footer__cards">
-                        <img src="assets/img/card1.png" alt="" class="footer__card">
-                        <img src="assets/img/card2.png" alt="" class="footer__card">
-                        <img src="assets/img/card3.png" alt="" class="footer__card">
-                        <img src="assets/img/card4.png" alt="" class="footer__card">
+                        <span class="iconify" data-icon="ic:outline-pix" data-width="27" data-height="27"></span>
+                        <span class="iconify" data-icon="icons8:visa" data-width="33" data-height="33"></span>
+                        <span class="iconify" data-icon="bi:paypal" data-width="22" data-height="22"></span>
+                        <span class="iconify" data-icon="icons8:mastercard" data-width="33" data-height="33"></span>
                     </div>
                 </div>
             </div>
